# pitara

./: .gitignore  CMakeLists.txt  README.md
body_c/: .gitignore  CMakeLists.txt
body_c/src/: main.c
include/: const.h  pad.h  screen.h  state.h
neck_firmware/: platformio.ini
neck_firmware/src/: main.cpp
neck_pio/: compile_commands.json
neck_pio/src/: main.cpp
src/: main.c  pad.c
